# my_repository

./: git_setumei.py
opencv_study/HelloCV/HelloCV/: Ch_4VideoCapture_Class_study.cpp  HelloCV.vcxproj  HelloCV.vcxproj.filters  ch10_Color_Study.cpp
opencv_study/HelloCV/HelloCV/x64/Debug/: HelloCV.ilk  vc143.idb
opencv_study/HelloCV/HelloCV/x64/Debug/HelloCV.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/my_first_package/: package.xml  setup.py
src/my_first_package/my_first_package/: my_publisher.py  my_service_server.py  my_subscriber.py  turtle_cmd_and_pose.py
src/my_first_package_msg/: CMakeLists.txt  package.xml
