<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_first_package_msg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ysk@todo.todo">ysk</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 빌드및 실행에 필요한 ros2의 의존성추가-->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!--메세지 타입 생성에 필요한 의존성추가-->
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- 엑션추가-->
  <depend>action_msg</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
